# Dominance

./: CMakeLists.txt  README.md
scripts/: build-and-run.sh  build.sh  clean.sh  configure-env.sh  configure.sh  run.sh
src/: Dominance.cpp  dominance.cpp
